color contrast fix

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -30,7 +30,7 @@ nav {
 nav a {
     display: block;
     text-decoration: none;
-    color: white;
+    color: #000;
     display: block;
     padding: 0.5rem;
     text-align: center;
